test: RatingService, AuthController