@@ -2,212 +2,194 @@ package com.ai.hackemotion.service.impl;
 
 import com.ai.hackemotion.dto.request.AssetRequest;
 import com.ai.hackemotion.dto.request.EmotionRequest;
+import com.ai.hackemotion.dto.request.UserAssetEmotionRequest;
 import com.ai.hackemotion.entity.Asset;
 import com.ai.hackemotion.entity.Emotion;
+import com.ai.hackemotion.entity.User;
 import com.ai.hackemotion.entity.UserAssetEmotion;
 import com.ai.hackemotion.repository.AssetRepository;
 import com.ai.hackemotion.repository.EmotionRepository;
 import com.ai.hackemotion.repository.UserAssetEmotionRepository;
-import com.ai.hackemotion.entity.User;
 import com.ai.hackemotion.repository.UserRepository;
 import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.MockitoAnnotations;
 
-import java.util.Arrays;
-import java.util.Optional;
+import java.util.*;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
 class AssetServiceImplTest {
 
     @Mock
     private AssetRepository assetRepository;
-
     @Mock
     private EmotionRepository emotionRepository;
-
     @Mock
     private UserAssetEmotionRepository userAssetEmotionRepository;
-
     @Mock
     private UserRepository userRepository;
 
     @InjectMocks
-    private AssetServiceImpl assetServiceImpl;
+    private AssetServiceImpl assetService;
 
-    private User testUser;
-    private Asset testAsset;
-    private Emotion testEmotion;
+    private User user;
+    private Asset asset;
+    private Emotion emotion;
 
     @BeforeEach
     void setUp() {
-        testUser = User.builder()
+        MockitoAnnotations.openMocks(this);
+
+        user = User.builder()
                 .id(1L)
-                .username("testUser")
+                .username("testuser")
                 .build();
 
-        testAsset = Asset.builder()
+        asset = Asset.builder()
                 .id(1L)
                 .name("Test Asset")
-                .url("http://test.com/asset")
-                .user(testUser)
+                .url("http://example.com")
+                .user(user)
                 .build();
 
-        testEmotion = Emotion.builder()
+        emotion = Emotion.builder()
                 .id(1L)
                 .name("Happy")
                 .build();
     }
 
     @Test
-    void createAsset_Success() {
-        AssetRequest request = new AssetRequest("http://test.com/asset","Test Asset", "testUser");
+    void testCreateAsset_success() {
+        AssetRequest request = new AssetRequest();
+        request.setName("Test Asset");
+        request.setUrl("http://example.com");
+        request.setUsername("testuser");
 
-        when(userRepository.findByUsername("testUser")).thenReturn(Optional.of(testUser));
-        when(assetRepository.save(any(Asset.class))).thenReturn(testAsset);
+        when(userRepository.findByUsername("testuser")).thenReturn(Optional.of(user));
+        when(assetRepository.save(any(Asset.class))).thenReturn(asset);
 
-        Asset result = assetServiceImpl.createAsset(request);
+        Asset createdAsset = assetService.createAsset(request);
+
+        assertNotNull(createdAsset);
+        assertEquals("Test Asset", createdAsset.getName());
+        verify(assetRepository, times(1)).save(any(Asset.class));
+    }
+
+    @Test
+    void testCreateAsset_userNotFound() {
+        AssetRequest request = new AssetRequest();
+        request.setUsername("unknownUser");
+
+        when(userRepository.findByUsername("unknownUser")).thenReturn(Optional.empty());
+
+        assertThrows(RuntimeException.class, () -> assetService.createAsset(request));
+    }
+
+    @Test
+    void testAddEmotionsToAsset_success() {
+        EmotionRequest request = new EmotionRequest();
+        request.setUser(user);
+        request.setEmotions(List.of(emotion));
+
+        when(assetRepository.findById(1L)).thenReturn(Optional.of(asset));
+        when(userRepository.findByUsername("testuser")).thenReturn(Optional.of(user));
+        when(emotionRepository.findById(1L)).thenReturn(Optional.of(emotion));
+
+        Asset result = assetService.addEmotionsToAsset(1L, request);
 
         assertNotNull(result);
-        assertEquals("Test Asset", result.getName());
-        assertEquals("http://test.com/asset", result.getUrl());
-        assertEquals(testUser, result.getUser());
-
-        verify(userRepository).findByUsername("testUser");
-        verify(assetRepository).save(any(Asset.class));
-
+        verify(userAssetEmotionRepository, times(1)).save(any(UserAssetEmotion.class));
     }
 
     @Test
-    void createAsset_UserNotFound(){
-        AssetRequest request = new AssetRequest("http://test.com/asset","Test Asset", "nonExistentUser");
+    void testAddEmotionsToAsset_assetNotFound() {
+        when(assetRepository.findById(1L)).thenReturn(Optional.empty());
 
-        when(userRepository.findByUsername("nonExistentUser")).thenReturn(Optional.empty());
+        EmotionRequest request = new EmotionRequest();
+        request.setUser(user);
+        request.setEmotions(List.of(emotion));
 
-        Exception exception = assertThrows(RuntimeException.class, () -> {
-            assetServiceImpl.createAsset(request);
-        });
-
-        assertEquals("User not found: nonExistentUser", exception.getMessage());
-
-        verify(userRepository).findByUsername("nonExistentUser");
-        verify(assetRepository, never()).save(any(Asset.class));
+        assertThrows(RuntimeException.class, () -> assetService.addEmotionsToAsset(1L, request));
     }
 
     @Test
-    void addEmotionsToAsset_Success() {
-        Long assetId = 1L;
-        Emotion emotion = Emotion.builder().id(1L).name("Happy").build();
-        EmotionRequest emotionRequest = new EmotionRequest();
-        emotionRequest.setEmotions(Arrays.asList(testEmotion));
-        emotionRequest.setUser(testUser);
+    void testAddEmotionsToAsset_userNotFound() {
+        when(assetRepository.findById(1L)).thenReturn(Optional.of(asset));
+        when(userRepository.findByUsername(anyString())).thenReturn(Optional.empty());
 
-        when(assetRepository.findById(assetId)).thenReturn(Optional.of(testAsset));
-        when(userRepository.findByUsername("testUser")).thenReturn(Optional.of(testUser));
-        when(emotionRepository.findById(emotion.getId())).thenReturn(Optional.of(emotion));
-        when(userAssetEmotionRepository.save(any(UserAssetEmotion.class)))
-                .thenReturn(UserAssetEmotion.builder()
-                        .user(testUser)
-                        .asset(testAsset)
-                        .emotion(testEmotion)
-                        .build()
-                );
+        EmotionRequest request = new EmotionRequest();
+        request.setUser(user);
+        request.setEmotions(List.of(emotion));
 
-        Asset result = assetServiceImpl.addEmotionsToAsset(assetId, emotionRequest);
+        assertThrows(EntityNotFoundException.class, () -> assetService.addEmotionsToAsset(1L, request));
+    }
+
+    @Test
+    void testGetAssetsByUsername_success() {
+        UserAssetEmotion userAssetEmotion = UserAssetEmotion.builder()
+                .asset(asset)
+                .emotion(emotion)
+                .user(user)
+                .build();
+
+        when(userRepository.findByUsername("testuser")).thenReturn(Optional.of(user));
+        when(userAssetEmotionRepository.findAllByUserId(1L)).thenReturn(List.of(userAssetEmotion));
+
+        List<UserAssetEmotionRequest> result = assetService.getAssetsByUsername("testuser");
 
         assertNotNull(result);
-        assertEquals(testAsset.getId(), result.getId());
-
-        verify(assetRepository).findById(assetId);
-        verify(userRepository).findByUsername(testUser.getUsername());
-        verify(emotionRepository).findById(emotion.getId());
-        verify(userAssetEmotionRepository).save(any(UserAssetEmotion.class));
+        assertEquals(1, result.size());
+        assertEquals("Test Asset", result.get(0).getName());
     }
 
-    // addEmotionsToAsset_UserNotFound
     @Test
-    void addEmotionsToAsset_UserNotFound(){
-        Long assetId = 1L;
-        Emotion emotion = Emotion.builder().id(1L).name("Happy").build();
-        EmotionRequest emotionRequest = new EmotionRequest();
-        emotionRequest.setEmotions(Arrays.asList(testEmotion));
-        User nonExistentUser = new User();
-        nonExistentUser.setUsername("nonExistentUser");
-        nonExistentUser.setId(1L);
-        nonExistentUser.setFullName("nonExistentUser Fullname");
-        nonExistentUser.setEmail("nonExistentUser@mail.com");
-        emotionRequest.setUser(nonExistentUser);
+    void testGetAssetsByUsername_userNotFound() {
+        when(userRepository.findByUsername(anyString())).thenReturn(Optional.empty());
 
-        when(assetRepository.findById(assetId)).thenReturn(Optional.of(testAsset));
-        when(userRepository.findByUsername("nonExistentUser")).thenReturn(Optional.empty());
-
-        Exception exception = assertThrows(EntityNotFoundException.class, () -> {
-            assetServiceImpl.addEmotionsToAsset(assetId, emotionRequest);
-        });
-
-        assertTrue(exception.getMessage().contains("User not found"));
-
-        verify(userRepository).findByUsername("nonExistentUser");
-        verify(emotionRepository, never()).findById(emotion.getId());
-        verify(assetRepository).findById(assetId);
-        verify(userAssetEmotionRepository, never()).save(any(UserAssetEmotion.class));
-
+        assertThrows(RuntimeException.class, () -> assetService.getAssetsByUsername("unknownUser"));
     }
 
-    // addEmotionsToAsset_AssetNotFound
     @Test
-    void addEmotionsToAsset_AssetNotFound(){
-        Long assetId = 999L;
-        Emotion emotion = Emotion.builder().id(1L).name("Happy").build();
-        EmotionRequest emotionRequest = new EmotionRequest();
-        emotionRequest.setEmotions(Arrays.asList(testEmotion));
+    void testGetAllAssets_success() {
+        UserAssetEmotion userAssetEmotion = UserAssetEmotion.builder()
+                .asset(asset)
+                .emotion(emotion)
+                .user(user)
+                .build();
 
-        when(assetRepository.findById(assetId)).thenReturn(Optional.empty());
+        when(userAssetEmotionRepository.findAll()).thenReturn(List.of(userAssetEmotion));
 
-        Exception exception = assertThrows(RuntimeException.class, () -> {
-            assetServiceImpl.addEmotionsToAsset(assetId, emotionRequest);
-        });
+        List<UserAssetEmotionRequest> result = assetService.getAllAssets();
 
-        assertEquals("Asset not found", exception.getMessage());
-
-        verify(userRepository, never()).findByUsername("testUser");
-        verify(emotionRepository, never()).findById(emotion.getId());
-        verify(assetRepository).findById(assetId);
-        verify(userAssetEmotionRepository, never()).save(any(UserAssetEmotion.class));
-
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("Test Asset", result.get(0).getName());
     }
-    // addEmotionsToAsset_EmotionNotFound
+
     @Test
-    void addEmotionsToAsset_EmotionNotFound(){
-        Long assetId = 1L;
-        Emotion nonExistentEmotion = Emotion.builder().id(999L).name("NonExistent").build();
-        EmotionRequest emotionRequest = new EmotionRequest();
-        emotionRequest.setUser(testUser);
-        emotionRequest.setEmotions(Arrays.asList(nonExistentEmotion));
+    void testIsAssetAvailableForUser_true() {
+        when(userRepository.findByUsername("testuser")).thenReturn(Optional.of(user));
+        when(assetRepository.findByUserId(1L)).thenReturn(List.of(asset));
 
-        when(assetRepository.findById(assetId)).thenReturn(Optional.of(testAsset));
-        when(userRepository.findByUsername("testUser")).thenReturn(Optional.of(testUser));
-        when(emotionRepository.findById(nonExistentEmotion.getId())).thenReturn(Optional.empty());
+        boolean available = assetService.isAssetAvailableForUser("Test Asset", "testuser");
 
-        Exception exception = assertThrows(RuntimeException.class, () -> {
-            assetServiceImpl.addEmotionsToAsset(assetId, emotionRequest);
-        });
+        assertTrue(available);
+    }
 
-        assertTrue(exception.getMessage().contains("Emotion not found"));
-        //assertEquals("Emotion not found: 999", exception.getMessage());
+    @Test
+    void testIsAssetAvailableForUser_false() {
+        when(userRepository.findByUsername("testuser")).thenReturn(Optional.of(user));
+        when(assetRepository.findByUserId(1L)).thenReturn(List.of());
 
-        verify(userRepository).findByUsername("testUser");
-        verify(emotionRepository).findById(nonExistentEmotion.getId());
-        verify(assetRepository).findById(assetId);
-        verify(userAssetEmotionRepository, never()).save(any(UserAssetEmotion.class));
+        boolean available = assetService.isAssetAvailableForUser("Nonexistent Asset", "testuser");
 
+        assertFalse(available);
     }
 }
